# ContextLedger

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  tasks.json
.claude/: settings.local.json
.claude/skills/contextledger-setup/: SKILL.md
actions/skill-diff/: action.yml  entrypoint.sh
actions/skill-validate/: action.yml  entrypoint.sh
contextledger/: __main__.py
contextledger/backends/embedding/: factory.py  jina.py  openai.py  (+1 more)
contextledger/cli/: main.py
contextledger/core/: protocols.py  types.py
contextledger/editor/: server.py
contextledger/integrations/: langchain_handler.py
contextledger/mcp/: mcp_server.py  server.py
contextledger/memory/: cmv.py  tiers.py  trimmer.py
contextledger/merge/: evaluator.py  findings_extractor.py  resolver.py  scorer.py
contextledger/project/: fusion.py  manager.py  manifest.py  router.py
contextledger/skill/: dag.py  deps.py  extractor.py  fork.py  parser.py  wizard.py
docs/: contextledger-architecture.md  contextledger-phase2-plan.md  contextledger-phase3-feature0-two-database.md  contextledger-phase3-plan.md  contextledger-positioning.md  contextledger-remaining-work.md
tests/: conftest.py
tests/cli/: test_main.py  test_project_commands.py
tests/core/: test_protocols.py  test_types.py
tests/editor/: test_server.py
tests/integration/: test_llm_real.py  test_multi_skill_project.py  test_second_brain.py  test_skill_versioning.py  test_two_database.py
tests/integrations/: test_langchain_handler.py
tests/mcp/: test_server.py
tests/memory/: test_cmv.py  test_cmv_gaps.py  test_tiers.py  test_trimmer.py
tests/merge/: test_evaluator.py  test_evaluator_real.py  test_findings_extractor.py  test_resolver.py  test_scorer.py
tests/project/: test_fusion.py  test_manager.py  test_manifest.py  test_router.py
tests/skill/: test_composition.py  test_dag.py  test_extractor.py  test_fork.py  test_node_executor.py  test_parser.py
vscode-contextledger/: README.md  package.json  tsconfig.json
vscode-contextledger/src/: ctxClient.ts  extension.ts
(+24 files in other folders)
